--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -50,8 +50,11 @@
     .ui-modal.type-goldkey .ui-modal-header img{width:81px;}
     .ui-modal.type-goldkey .ui-modal-header .logo{top:25px; left:20px;}
     .type-goldkey .leader-list{margin-top:20px;}
-    
-}
+
+    /* 마이페이지 */
+    .box-list-a {padding:0 24px}
+
+ }
 @media (max-width:1400px) {
     body {background-size:cover;}
     .base-wrap{padding-top:55px;}
@@ -465,6 +468,19 @@
 
     /* btn */
     .btn-gold.big {height:48px;padding:6px 30px;font-size:20px}
+
+    /* 마이페이지 */
+    .box-item-a .link-review {display:block;padding:16px 20px}
+    .box-item-a .leader-info-a {width:100%;margin:-50px 0 0;position:relative}
+    .box-item-a .box-content {padding-left:0;width:100%}
+    .box-item-a .content-item .content-title {font-size:16px}
+    .box-item-a .content-item .data-title {font-size:15px}
+    .box-item-a .content-item .data-title .subject {font-size:14px}
+    .box-item-a .content-item .data-txt {display:none}
+    .box-item-a .review-data {display:block}
+    .box-item-a .review-data .txt-review {font-size:14px;width:100%;margin-top:4px;white-space:normal;display:-webkit-box;-webkit-line-clamp:2;overflow:hidden;-webkit-box-orient:vertical;max-height:42px}
+    .box-item-a ~ .box-item-a {margin-top:50px}
+    .box-item-a .writer-data {font-size:14px;text-align:left}
 }
 @media (max-width:510px) {
     .ui-modal-cont .leader-list {padding:0 10px}
