--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -63,7 +63,7 @@ body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg'
 .base-wrap {position:relative;width:100%;height:100%;z-index:0;-webkit-overflow-scrolling:touch;padding-top:110px}
 .base-main {width:100%}
 .base-body-a {width:100%}
-.base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0;height:460px}
+.base-footer {width:100%;background:url('../../resources/images/common/footer_bg.png') no-repeat 50% 0 / cover;height:460px}
 .base-footer.type-b {background-image:url("../../resources/images/common/footer_bg_b.png")}
 .page-sub .base-footer {background-image:url("../../resources/images/common/footer_bg_d.png");height:400px}
 .base-container {max-width:1500px;margin:0 auto;position:relative}
