--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -54,6 +54,8 @@
     /* 마이페이지 */
     .box-list-a {padding:0 24px}
 
+    .leader-section-a{padding:0 50px}
+
  }
 @media (max-width:1400px) {
     body {background-size:cover;}
@@ -62,6 +64,7 @@
     .logo-tera {display:block;float:left; width:81px; }
     .logo-tera img{width:100%; display: block;}
 
+    
 
     .goldkey{position: absolute; top:20px; left:-15px; z-index: 100; width:45px; }
     .goldkey .key-line{display:block; position: absolute; top:0; left:27px; height:50px;}
@@ -260,6 +263,7 @@
 }
 @media (max-width:1000px) {
     /* 메인 */
+    .leader-section-a{padding:0}
     .section-a .service-info {display:block}
     .section-a .service-info .service-item ~ .service-item {margin:30px 0 0 0}
     .section-a .section-a-title {font-size:28px;padding:0 20px}
