--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -105,6 +105,7 @@
 .ui-modal.type-payment .content{padding:30px 50px; min-height:400px;}
 
 
+.level-01{font-size:18px; padding:5px 10px; border-radius:15px; border:2px solid #c39863; color:#c39863; display:inline-block; vertical-align: middle;}
 .class-label{font-size:18px; padding:5px 10px; border-radius:15px; border:2px solid #c39863; color:#c39863; display:block; position:absolute; top:20px; left:20px;}
 
 .leader-info{position:relative; width:100%; max-width:1600px; margin:0 auto 210px;}
@@ -284,10 +285,11 @@
 
 /* sub title */
 .title-group{width:100%; position: relative; padding-left:20px; min-height:350px;}
-.title-group h2{font-size:70px; color:#fff; font-weight:100;}
+.title-group h2{font-size:70px; color:#fff; font-weight:100; margin-bottom:4px;}
 .title-group p{color:#fff; font-size:27px; font-weight:500; line-height:1.4; padding-left:5px}
 .title-group p em{color:#f5e987; border-bottom:4px solid #f5e987;}
-
+.title-group p em.num{color:#ffe36f; border-bottom:0; font-size:50px; font-family: 'Roboto', sans-serif; display: block; margin-top:-14px;}
+.title-group p em.num span{font-size:70px;}
 /* banner */
 .ajax-banner{position:absolute; top:-10px; right:-60px; z-index: 1; width:750px;}
 .ajax-banner .banner-swiper{margin:0 auto;width:560px;}
@@ -410,3 +412,10 @@
 .search-area .input-a {border-color:#d6d6d6;border-width:1px}
 .search-area .form-item [class^="form-col-"] ~ [class^="form-col-"]  {padding-left:8px}
 .search-area .btn-type-c {min-width:100px}
+
+/* tab link */
+.tab-link a{font-size:24px; color:#fff; }
+.btn-gold {display:inline-block;border:2px solid #c7941a;background: linear-gradient(-69deg,#e2a936, #a27623,#ae7f2d ,  #f5c75f 70%, #e6b352);color:#fff;font-family: SCD;font-weight: 600;text-shadow:0 1px 4px rgba(137,100,37,1);box-shadow:10px 0 10px rgba(0,0,0,.6);transition:all .2s ease-out}
+.btn-gold:hover,
+.btn-gold:focus{background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00);border-color:#80590d;box-shadow:0 0 8px rgba(0,0,0,.9)}
+.btn-gold.selected{background: linear-gradient(-46deg, #242424,#2c2c2c 40%, #3f3f3f, #393939);border-color:#3e3e3e}
