--- a/resources/css/ui.fonts.css
+++ b/resources/css/ui.fonts.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&family=Roboto:wght@700&display=swap');
 
 @font-face {
     font-family:'SCD';
