--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -173,3 +173,11 @@ body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg'
 .form-select[disabled] {background-color:#f7f7f7;color:#888}
 .form-select:focus{border-color:#000}
 .ie9 .form-select {padding:0}
+
+/* radio */
+.box-radio-group {display:flex;border:1px solid #d6d6d6;border-radius:8px;height:54px;overflow:hidden}
+.box-radio-group .radio-item {flex:1;height:100%;position:relative}
+.box-radio-group .radio-item .in-radio {opacity:0;position:absolute;top:0;left:0}
+.box-radio-group .radio-item ~ .radio-item {border-left:1px solid #d6d6d6}
+.box-radio-group .radio-item .radio-label {font-size:18px;display:flex;align-items:center;justify-content:center;height:100%;background-color:#fff}
+.box-radio-group .radio-item .in-radio:checked + .radio-label {background-color:#514635;color:#fff}
