--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -365,7 +365,7 @@
 .form-item .form-col-e {width:300px}
 .form-col-d .form-select {width:100%}
 .form-item .form-col-btn {width:1px;white-space:nowrap;font-size:0}
-.form-item .form-col-txt {width:1px;white-space:nowrap;padding:0 10px !important;font-size:24px;color:#000;font-weight:500}
+.form-item .form-col-txt {width:1px;white-space:nowrap;padding:0 10px !important;font-size:24px;color:#000;font-weight:500;text-align:center}
 .form-item .form-col-btns {font-size:0}
 .form-item .form-col-btn button ~ button,
 .form-item .form-col-btns button ~ button {margin-left:8px}
