--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -300,6 +300,7 @@
 
 /* login */
 .box-a {max-width:1100px;margin:0 auto;background-color:#fff;border-radius:30px;box-shadow:10px 0 10px rgba(0,0,0,.07);padding:60px 0}
+.box-a.big {max-width:1500px}
 .login-area {max-width:585px;margin:0 auto}
 .login-area .btn-gold {margin-top:40px}
 .btn-gold.big {position:relative; height:80px; border-radius:40px; padding:10px 60px; width:100%;font-size:32px; font-weight:500; font-family:'Noto Sans KR'; background:linear-gradient(-69deg,#fff28c, #daa337, #dda93e 70%, #ebbc4c 80%, #fff28c);box-shadow:0 0 12px rgba(0,0,0,.17);border:none}
@@ -373,6 +374,7 @@
 .form-item [class^="form-col-"] + .form-col-btn {padding-left:10px}
 .form-item label {font-size:21px;color:#000}
 .form-item .input-a {border:2px solid #eee;border-radius:8px;height:54px;width:100%;padding:0 12px;font-size:21px;font-weight:500;outline:none;color:#565656;box-sizing:border-box}
+.form-item .input-a:disabled {background-color:#eee;color:#999}
 .form-item .input-a:focus {border-color:#292a2e}
 .form-item .input-a::-webkit-input-placeholder {color:#bfbfbf;font-weight:300}
 .form-item .input-a::-moz-placeholder {color:#bfbfbf;font-weight:300}
