--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -436,6 +436,7 @@
 .box-search-b .form-item .input-a:-moz-placeholder {font-size:18px}
 
 /* tab link */
+.tab-link select{display:none;}
 .tab-link{position:relative; margin:-80px auto 30px; text-align:center;}
 .tab-link a{font-size:24px; color:#fff;display:inline-block;padding:14px 40px 10px; background:#898989; border:2px solid #828282; font-weight:600;box-shadow:0 5px 10px rgba(0,0,0,.2);  text-align: center; border-radius:35px; height:70px; margin:0 10px; text-shadow:0 1px 4px rgba(137,100,37,1);}
 .tab-link a.selected{border:2px solid #c7941a;background: linear-gradient(-69deg,#e2a936, #a27623,#ae7f2d ,  #f5c75f 70%, #e6b352);}
