--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -445,10 +445,11 @@
 
 .courses-wrap{display:flex; flex-wrap:wrap; }
 .courses-item::after{content:""; display:block; clear:both;}
+.courses-item .flag{position: absolute; top:0; right:10px;}
 .courses-item{background-color: #fff; border-radius: 20px;border: 1px solid transparent;box-shadow: 5px 0 18px rgb(0 0 0 / 15%);position: relative; flex:0 calc(50% - 30px); margin:15px 15px; overflow:hidden}
-.courses-item-a{float:left; width:260px; position:relative; padding: 20px 30px 0 30px;}
-.courses-item-b{float:left; width:calc(100% - 320px); padding: 20px 30px 0 0;}
-.courses-item-b dt {font-size:26px;font-weight:600;color:#c39863;line-height:26px; padding:30px 0 0;}
+.courses-item-a{float:left; width:240px; position:relative; padding: 20px 20px 0;}
+.courses-item-b{float:left; width:calc(100% - 280px); padding: 20px 20px 0 0;}
+.courses-item-b dt {font-size:26px;font-weight:600;color:#c39863;line-height:26px; padding:30px 50px 0 0;}
 .courses-item-b dt .ctg {display:inline-block;border:1px solid #c39863;margin-right:4px;border-radius:4px;color:#c39863;font-size:18px;padding:4px 12px 4px;line-height:1;height:auto;vertical-align:top;font-weight:400}
 .courses-item-b dt b{color:#514635; font-size:18px; font-weight:600; display:block; margin:15px 0 10px;}
 .courses-item-b dd ul{overflow:hidden;}
@@ -461,8 +462,10 @@
 .courses-item-c ol li.on{background:#514635; color:#fff;}
 .courses-item-c ol li{width:46px; height:46px; border:2px solid #514635; color:#514635; text-align: center; line-height: 42px; font-size:20px; font-weight:500; font-family: 'Roboto'; display:inline-block; border-radius:50%; margin:0 10px;}
 .courses-item-c .btn-gold.big{width:80%; }
-
-
+.courses-item-c .btn-gold.big:disabled::before{background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00);border-color:#80590d;box-shadow:0 0 8px rgba(0,0,0,.9)}
+.ready .courses-item-c ol li{background:#dfdfdf !important; border-color:#dfdfdf !important; color:#fff !important;}
+.ready .courses-item-c .btn-gold.big:disabled{background:#ababad !important; border-color:#ababad !important;}
+.ready .courses-item-c .btn-gold.big:disabled::before{display:none}
 .btn-talk{height: 50px;background-color: #514635;border-radius: 25px;color: #fff;font-size: 20px;font-weight: 400;display: inline-block;padding: 0 20px;line-height: 48px; position:absolute; bottom:0; left:50%; transform: translate(-50%, 0);}
 .btn-talk::before{content:""; display:inline-block; width:30px; height:30px; background:url(../../resources/images/common/ico-talk.png) no-repeat 0 0 / cover; vertical-align: middle;}
 
