--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -155,6 +155,8 @@
     .box-search-b .search-col-b {width:calc((100% - 8px) / 2)}
     .box-search-b .search-col-b + .search-col-a {position:absolute;bottom:0;right:0;width:100%;margin-left:0}
     .box-search-b .search-col-b .input-a {width:100%}
+    
+    .courses-item{flex: 0 calc(100% - 30px);}
 
 }
 @media (max-width:1280px) {
@@ -187,8 +189,10 @@
     .title-group h2 {font-size:54px}
     .title-group p {font-size:24px}
 
+    .tab-link a{font-size:20px; color:#fff;display:inline-block;padding:14px 20px 10px; background:#898989; border:2px solid #828282; font-weight:600;box-shadow:0 5px 10px rgba(0,0,0,.2);  text-align: center; border-radius:35px; height:70px; margin:0 10px; text-shadow:0 1px 4px rgba(137,100,37,1);}
 }
 @media (max-width:1100px) {
+    .tab-link{margin-top:20px;}
     /* 메인 */
     .article-box .section-a {padding:40px 0 50px}
     .section-a .section-a-title {font-size:32px}
@@ -284,6 +288,7 @@
     .box-radio-group {height:40px;border-radius:6px}
     .box-radio-group .radio-item .radio-label {font-size:14px}
 
+   
 }
 @media (max-width:1000px) {
     /* 메인 */
