--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -86,7 +86,7 @@
 .ui-modal.type-goldkey .teacher-menu .dep-1 .n3::before{top:215px}
 
 /* 결제하기 */
-.type-payment .ui-modal-wrap{border-radius:30px;}
+.type-payment .ui-modal-wrap{border-radius:30px; overflow: hidden;}
 .ui-modal.type-payment.ready.open.current:after{background:rgba(0,0,0,0.7)}
 .ui-modal.type-payment .ui-modal-header{position:relative;  background:#292a2e; color:#fff; padding:60px 0 30px;}
 .type-payment .ui-modal-wrap{background:transparent; width:740px;}
