--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -315,6 +315,7 @@
 .btn-gold.big:hover:before {opacity:.5}
 .login-other {max-width:1100px;margin:20px auto 0;padding:0 28px;display:flex;justify-content:space-between}
 .login-other .other-item .box-checkbox-a {margin-right:26px}
+.login-other .other-item .link-join ~ .link-join {margin-left:20px}
 .login-other .link-join {position:relative;padding-right:16px;display:inline-block}
 .login-other .link-join:after {content:'';position:absolute;display:inline-block;width:10px;height:10px;border:solid #36383f;border-width:2px 2px 0 0;-webkit-transform:rotate(45deg);transform:rotate(45deg);top:50%;right:0;z-index:10;margin-top:-5px}
 .login-other .link-join .link-txt {text-decoration:underline;font-size:24px;color:#36383f}
@@ -393,7 +394,7 @@
 .leader-info-a .leader-img img {vertical-align:top;max-width:100%}
 .leader-info-a .leader-name {margin-top:8px;font-size:16px;font-weight:600;color:#555}
 .box-item-a .box-content {width:calc(100% - 100px);padding-left:20px}
-.content-item-group {margin-top:12px;padding-top:12px;border-top:1px dashed #eee}
+.content-item-group {margin-top:12px;padding-top:12px;border-top:1px dashed #eee;position:relative}
 .box-item-a .content-item ~ .content-item {margin-top:8px}
 .box-item-a .content-item .content-title {font-size:18px;color:#000;font-weight:500}
 .box-item-a .content-item .content-data {margin-top:4px}
@@ -411,6 +412,12 @@
 .content-item-group .content-item .content-title {font-size:16px;float:left;line-height:20px}
 .content-item-group .content-item .content-data {font-size:16px;float:left;line-height:20px;margin-top:0;padding-left:4px}
 .content-item-group .content-item .content-data .pay {color:#c39863;font-weight:600;font-size:18px}
+.content-item-group .content-item-btn {position:absolute;top:12px;right:0}
+.content-item-btn .btn-talk {position:static;transform:translate(0, 0)}
+.content-item-btn button {height:40px;border-radius:20px;vertical-align:top;font-weight:500;font-size:16px}
+.content-item-btn button.btn-gold {padding:0 20px;font-weight:600;box-shadow:0 0 6px rgba(0,0,0,.2);}
+.content-item-btn button.btn-talk {line-height:38px;box-shadow:0 0 6px rgba(0,0,0,.2);margin-left:4px;transition:all .2s ease-out;-webkit-transition:all .2s ease-out}
+.content-item-btn button.btn-talk:hover {background-color:#252525}
 .btn-area-a {margin-top:20px;font-size:0;text-align:center}
 .btn-area-a [class^="btn-type-"] ~ [class^="btn-type-"] {margin-left:10px}
 .btn-area-a [class^="btn-type-"] {min-width:120px;text-align:center}
