--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -308,7 +308,7 @@
 .leader-section-c .more-area .btn-more:after {width:2px;height:20px;margin:-10px 0 0 -1px}
 
 /* sub title */
-.title-group{width:100%; position: relative; padding-left:20px; min-height:0; margin-bottom:90px}
+.title-group{width:100%; position: relative; padding-left:20px; min-height:200px; margin-bottom:90px}
 .title-group h2{font-size:70px; color:#fff; font-weight:100; margin-bottom:4px;}
 .title-group p{color:#fff; font-size:27px; font-weight:500; line-height:1.4; padding-left:5px}
 .title-group p em{color:#f5e987; border-bottom:4px solid #f5e987;}
