--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -190,7 +190,7 @@
     .title-group p em.num span{font-size:30px}
     .title-group p em.num{font-size:22px; margin-top:3px;}
 
-    .tab-link{margin:0 0 10px;}
+    .tab-link{margin:0 0 20px;}
     .tab-link a{font-size:20px; padding:14px 20px 10px; box-shadow:0 5px 10px rgba(0,0,0,.2); border-radius:30px; height:60px; margin:0 5px;}
 }
 @media (max-width:1100px) {
@@ -499,6 +499,8 @@
     body.page-sub{background-position:50% -190px}
     .title-group{margin-bottom:20px}
     .title-group h2 {font-size:26px}
+    .title-group .face{width:50px;}
+    .title-group .face img{width:100%;}
     .title-group p {font-size:14px}
     .title-group p em{ border-bottom:2px solid #f5e987; }
     .title-group p em.num span{font-size:24px}
