--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -150,6 +150,7 @@ body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg'
 .btn-type-c {height:54px;background-color:#514635;border-radius:8px;color:#fff;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:54px}
 .btn-type-d {height:54px;background-color:#ababad;border-radius:8px;color:#fff;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:54px}
 .btn-type-e {height:54px;background-color:#ababad;border-radius:8px;color:#fff;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:54px}
+.btn-type-f {height:54px;background-color:#c39863;border-radius:8px;color:#fff;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:54px}
 
 /* side nav */
 .sticky .btn-top {opacity:1}
